@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Fixed cmake warnings due to CMP0167. #338</p>
+</li>
+<li>
 <p>Removed invalid <code>#</code>. #336, #337</p>
 </li>
 <li>
